[2020/8/26] Quartz in sand Jarkati mineral now reduces player's movement speed, like regular sand.
[2020/8/25] Added new mineral to Jarkati: quartz ore in sand, to match the 'wisp' theme. Generates only regionally.
[2020/8/25] Wisps have a very small chance to spawn whenever players use teleports or the cloaking device.
[2020/8/25] Added wisp nests to Jarkati. Very rare. They spawn at mapgen-time.
[2020/8/25] Fixed a long-standing bug with teleports, in which an intended feature was actually missing for an entire year!
[2020/8/25] Cheating players now have Jaunt/Cloak/Big-Hotbar features automatically revoked. (Such players probably cheated the Survival Challenge.)
[2020/8/24] Known cheaters are now automatically booted out of town by law enforcement if caught tresspassing near other players. Use those city blocks!
[2020/8/23] Started coding 'exile' mod, for cheaters. Should be fun.
[2020/8/22] Fixed an exploit allowing cheating players to block the exit gate from the Outback.
[2020/8/21] Cloak ability: added particle effects.
[2020/8/16] Fixed sky bugs, added clouds to other realms.
[2020/8/16] Added new chat-command: 'chkbed'.
[2020/8/12] Warn players when someone tries to jaunt to them.
[2020/8/12] Made markers visible from slightly longer range.
[2020/8/12] Noclipping players can't escape from jail anymore.
[2020/8/12] It is no longer possible to use the 'Jaunt' special ability to teleport to cloaked players.
[2020/8/10] Added a new, rare and very powerful mob.
[2020/3/1] Scaffolding now *never* collapses when player walks on it, even when not protected.
[2020/2/26] Enabled cutting glowstone nodes with the table saw.
[2020/2/26] Added flint-and-steel to player start items when they spawn in the Outback.
[2020/2/25] Add climbable trapdoors.
[2020/2/25] Added regular craft recipes for inner and outer corner stairs.
[2020/2/23] Fixed some oversights in the new passive-healing system.
[2020/2/23] Player can no longer die from over-eating.