@@ -548,6 +548,26 @@ local microblocks_defs = {
 			fixed = {-0.5, -0.5, 0, 0, 0.5, 0.5},
 		},
 		light=16/64,
+	},
+	["_1s"] = {
+		node_box = {
+			type = "fixed",
+			fixed = {
+				{-0.5, -0.5, -0.5, 0, -0.4375, 0},
+				{0, -0.5, 0, 0.5, -0.4375, 0.5},
+			},
+		},
+		light=2/64,
+	},
+	["_16s"] = {
+		node_box = {
+			type = "fixed",
+			fixed = {
+				{-0.5, -0.5, -0.5, 0, 0, 0},
+				{0, -0.5, 0, 0.5, 0, 0.5},
+			},
+		},
+		light=16/64,
 	}
 }
 
