@@ -1,3 +1,4 @@
+[2020/8/28] More node shapes: pillars, microblocks. Cheaper castle masonry recipe.
 [2020/8/26] Quartz in sand Jarkati mineral now reduces player's movement speed, like regular sand.
 [2020/8/25] Added new mineral to Jarkati: quartz ore in sand, to match the 'wisp' theme. Generates only regionally.
 [2020/8/25] Wisps have a very small chance to spawn whenever players use teleports or the cloaking device.
